# ABSA-Sentiment-Analyzer

./: .env.example  README.md  dvc.yaml  main.py  pyproject.toml  requirements.txt
data/processed/: cleaned_reviews_for_llm.csv  llm_labeled_reviews.csv
data/raw/: .gitignore
notebook/: 1_data_scraping_and_eda.ipynb  2-data_preparation_for_training.ipynb
src/: config.py
src/data/: label_sample_data.py  prepare_training_data.py  scrape_data.py
